--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
-﻿click==8.0.3
-colorama==0.4.4
-Flask==2.0.2
-itsdangerous==2.0.1
+﻿Flask==2.0.2
 Jinja2
-MarkupSafe==2.0.1
 Werkzeug==2.0.2
-Owlready2==0.35
 chardet==4.0.0
-python-dateutil==2.8.2
 pandas==1.3.4
 flask-swagger-ui
 flask-wtf
