--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,36 @@
-﻿Flask==2.0.2
-Jinja2
-Werkzeug==2.0.2
+camelot-py==0.9.0
+certifi==2021.10.8
+cffi==1.15.0
 chardet==4.0.0
-pandas==1.3.4
-flask-swagger-ui
-flask-wtf
-flask-bootstrap
-wtforms
-requests
-xlrd
-colorama
-opencv
-pdf2image
+charset-normalizer==2.0.11
+click==8.0.3
+colorama==0.4.4
+cryptography==36.0.1
+dominate==2.6.0
+et-xmlfile==1.1.0
+Flask==2.0.2
+Flask-Bootstrap==3.3.7.1
+flask-swagger-ui==3.36.0
+Flask-WTF==1.0.0
+gunicorn==20.1.0
+idna==3.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+numpy==1.22.2
+opencv-python==4.5.5.62
+openpyxl==3.0.9
+pandas==1.4.0
+pdf2image==1.16.0
+pdfminer.six==20211012
+Pillow==9.0.1
+pycparser==2.21
+PyPDF2==1.26.0
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.27.1
+six==1.16.0
+urllib3==1.26.8
+visitor==0.1.3
+Werkzeug==2.0.2
+WTForms==3.0.1
