--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,17 @@ version: "3.7"
 
 services:
   flask:
-    build:
-      context: ./
+    container_name: flask
+    build: .
+    volumes:
+      - .:/app
     ports:
       - 5000:5000
+    restart: always
+    networks:
+      - flask
+
+networks:
+  flask:
+    name: custom_network
+    driver: bridge
