--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pandas
-requests
-opencv-python
-pdf2image
-flask
-flask_swagger_ui
-flask_wtf
-flask_bootstrap
+pandas==1.4.1
+requests==2.27.1
+opencv-python==4.5.5.64
+pdf2image==1.16.0
+Flask==2.0.3
+flask-swagger-ui==3.36.0
+Flask-WTF==1.0.0
+Flask-Bootstrap==3.3.7.1
 gunicorn
-xlrd
+xlrd==2.0.1
